--- a/static/index.css
+++ b/static/index.css
@@ -175,21 +175,27 @@ header {
     position: absolute;
     left: 0;
     bottom: 0;
-    background-image: linear-gradient(to top, #000 0%, transparent);
+    background-image: linear-gradient(to top, #000 5%, transparent);
 }
 
 .slider .list .item .content {
     position: absolute;
     left: 10%;
-    top: 30%;
-    width: 600px;
+    top: 28%;
+    width: 1000px;
     max-width: 80%;
     z-index: 10;
+    text-align: justify;
 }
 
 .slider .list .item .content p:nth-child(1) {
     text-transform: uppercase;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
+    font-size: 30px;
+}
+
+.slider .list .item .content p:nth-child(3){
+    font-size: 30px;
 }
 
 .slider .list .content h2 {
@@ -231,7 +237,7 @@ header {
 
 .arrows {
     position: absolute;
-    top: 30%;
+    top: 20%;
     right: 200px;
     z-index: 11;
 }
@@ -258,7 +264,7 @@ header {
     bottom: 50px;
     z-index: 13;
     display: flex;
-    gap: 100px;
+    gap: 10px;
     width: 100%;
     height: 250px;
     padding: 0 50px;
@@ -272,8 +278,8 @@ header {
 }
 
 .thumbnail .item {
-    width: 100px;
-    height: 100px;
+    width: 210px;
+    height: 210px;
     filter: brightness(.5);
     transition: .5s;
     flex-shrink: 0;
@@ -281,8 +287,8 @@ header {
 }
 
 .thumbnail .item img {
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -302,8 +308,21 @@ header {
     }
 
     .slider .list .item .content h2 {
-        font-size: 60px;
-        padding-top: 40px;
+        font-size: 35px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .slider .list .item .content p:nth-child(1){
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .slider .list .item .content p:nth-child(3){
+        font-size: 18px;
+        text-align: center;
     }
 
     .arrows {
