--- a/templates/index.html
+++ b/templates/index.html
@@ -62,21 +62,22 @@
                 <img src="{{ url_for('static', filename='imagen.jpg') }}">
                 <div class="content">
                     <p>Tienes problemas... Nosotros las soluciones</p>
-                    <h2>Slider 01</h2>
+                    <h2>QUIENES SOMOS</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Soluciones Spin es una empresa com mas de 15 años de experiencia, 
+                        especializada en brindar soluciones integrales en las areas: Civil, 
+                        Electrica y HVAC
                     </p>
                 </div>
             </div>
             <div class="item">
-                <img src="{{ url_for('static', filename='imagen3.jpg') }}">
+                <img src="{{ url_for('static', filename='imagen2.webp') }}">
                 <div class="content">
                     <p>design</p>
-                    <h2>Slider 02</h2>
+                    <h2>Seguridad Industrial</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Para Soluciones Spin S.A. de C.V. la seguridad es fundamental para
+                        el desarrollo de nuestra actividad empresarial.
                     </p>
                 </div>
             </div>
@@ -91,28 +92,29 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div> 
         <div class="arrows">
             <button class="prev"><</button>
             <button class="next">></button>
         </div>
+    
         <div class="thumbnail">
             <div class="item active">
                 <img src="{{ url_for('static', filename ='imagen.jpg') }}" alt="">
                 <div class="content">
-                    Slider Name
+                    
                 </div>
             </div>
             <div class="item">
-                <img src="{{ url_for('static', filename ='imagen3.jpg') }}" alt="">
+                <img src="{{ url_for('static', filename ='imagen2.webp') }}" alt="">
                 <div class="content">
-                    Slider Name
+                    
                 </div>
             </div>
             <div class="item">
                 <img src="{{ url_for('static', filename ='imagen4.jpg') }}" alt="">
                 <div class="content">
-                    Slider Name
+                   
                 </div>
             </div>
         </div>
