--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,16 @@
             <div class="item active">
                 <img src="{{ url_for('static', filename='imagen.jpg') }}">
                 <div class="content">
-                    <p>Tienes problemas... Nosotros las soluciones</p>
-                    <h2>QUIENES SOMOS</h2>
+                    <h2>Tienes problemas... Nosotros las soluciones.</h2>
+                    <p>
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ url_for('static', filename='imagen2.webp') }}">
+                <div class="content">
+                    <p></p>
+                    <h2>QUIENES SOMOS...</h2>
                     <p>
                         Soluciones Spin es una empresa com mas de 15 años de experiencia, 
                         especializada en brindar soluciones integrales en las areas: Civil, 
@@ -71,24 +79,14 @@
                 </div>
             </div>
             <div class="item">
-                <img src="{{ url_for('static', filename='imagen2.webp') }}">
+                <img src="{{ url_for('static', filename='imagen4.jpg') }}">
                 <div class="content">
-                    <p>design</p>
+                    <p></p>
                     <h2>Seguridad Industrial</h2>
                     <p>
                         Para Soluciones Spin S.A. de C.V. la seguridad es fundamental para
-                        el desarrollo de nuestra actividad empresarial.
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="{{ url_for('static', filename='imagen4.jpg') }}">
-                <div class="content">
-                    <p>design</p>
-                    <h2>Slider 03</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        el desarrollo de nuestra actividad empresarial. Es por ello que nuestro
+                        personal se encuentra en constante capacitacion. 
                     </p>
                 </div>
             </div>
