--- a/templates/services.html
+++ b/templates/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='services.css') }}">
     <title>Services</title>
 </head>
 <body>
@@ -43,7 +43,6 @@
                 <i class="fa-solid fa-bars" style="color: #101010;"></i>
             </div>
         </div>
-
         <div class="dropdown_menu">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
@@ -51,6 +50,27 @@
             <li><a href="/contact">Contact</a></li>
         </div>
     </header>
+    <div class="container">
+        <div class="content">
+            <ul class="buttons">
+                <li>
+                    <a href="#">
+                        <button class="btn_menu">Obra Civil</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <button class="btn_menu">Instalaciones Electricas</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <button class="btn_menu">HVAC</button>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script type="text/javascript" src="{{url_for('static', filename = 'app.js')}}"></script>
 </body>
 </html>
