--- a/templates/services.html
+++ b/templates/services.html
@@ -71,6 +71,50 @@
             </ul>
         </div>
     </div>
+        <div class="section">
+            <h1>Obra Civil</h1> 
+            <div class="services">
+                <div class="content">
+                <div class="item">
+                        <h2>Proyectos</h2>
+                        <ul class="items">
+                            <li>Arquitectonicos</li>
+                            <li>Estructurales</li>
+                            <li>Hidraulicos</li>
+                            <li>Vias Terestres</li>
+                        </ul>
+                </div> 
+                </div>
+            </div>
+            <div class="services">
+                <div class="content">
+                    <div class="item">
+                        <h2>Obra Nueva</h2>
+                        <ul class="items">
+                            <li>Estructuras de Mamposteria.</li>
+                            <li>Estructuras de concreto.</li>
+                            <li>Estructuras Metalicas.</li>
+                            <li>Firmes de Concreto.</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+            <div class="services">
+                <div class="content">
+                    <div class="item">
+                        <h2>Remodelaciones</h2>
+                        <ul class="items">
+                            <li>Acabados.</li>
+                            <li>Tablaroca.</li>
+                            <li>Canceleria.</li>
+                            <li>Pisos.</li>
+                            <li>Pintura.</li>
+                            <li>Adecuaciones de areas.</li>
+                        </ul>
+                    </div> 
+                </div>
+            </div>
+        </div>
     <script type="text/javascript" src="{{url_for('static', filename = 'app.js')}}"></script>
 </body>
 </html>
