--- a/static/services.css
+++ b/static/services.css
@@ -150,9 +150,9 @@ header {
 .container{
     position: relative;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 20px;
     width: auto;
-    height: 45em;
+    height: 90%;
     
 }
 
@@ -163,16 +163,13 @@ header {
     margin-top: 20px;
     height: 90%;
 
-    
-    
-
 }
 
 .buttons{
     display: flex;
     align-items: center;
     padding: 50px;
-    gap: 230px;
+    gap: 130px;
 }
 
 .btn_menu{ 
@@ -180,14 +177,43 @@ header {
     height: 230px;
     border-radius: 20px;
     border: none;
-    rotate: 45deg;
-    box-shadow: rgb(236, 189, 58) 10px 10px 90px 10px;
-    background: rgba(36, 108, 209, 0.5);
+    box-shadow: rgb(244, 190, 43) 10px 10px 90px 10px;
+    background-image: linear-gradient(to top, #f6da23 100%, transparent);
     backdrop-filter: blur(30px);
+    ;
 }
 
-
 .btn_menu:hover{
-    transform: rotate(360deg);
-    transition: 1s;
+    transform: scale(1.2);
+    transition: .5s;
+}
+
+.btn_menu:not(:hover){
+    transform: scale(1);
+    transition: .5s;
+}
+
+@media(max-width: 940px){
+    .buttons{
+        display: block;
+    }
+    .btn_menu{
+        margin-top: 40px;
+    }
+}
+
+.section{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background-color: darkseagreen;
+}
+
+.section .services{
+    position: relative;
+    margin: 20px;
+    padding: 20px;
+
+    background-color: #5d5d7e;
+    justify-content: center;
 }
