--- a/templates/services.html
+++ b/templates/services.html
@@ -72,21 +72,21 @@
         </div>
     </div>
         <div class="section">
-            <h1>Obra Civil</h1> 
+            <div class="head">
+                <h1>Obra Civil</h1>
+            </div> 
             <div class="services">
                 <div class="content">
-                <div class="item">
-                        <h2>Proyectos</h2>
-                        <ul class="items">
-                            <li>Arquitectonicos</li>
-                            <li>Estructurales</li>
-                            <li>Hidraulicos</li>
-                            <li>Vias Terestres</li>
-                        </ul>
-                </div> 
+                    <div class="item">
+                            <h2>Proyectos</h2>
+                            <ul class="items">
+                                <li>Arquitectonicos</li>
+                                <li>Estructurales</li>
+                                <li>Hidraulicos</li>
+                                <li>Vias Terestres</li>
+                            </ul>
+                    </div> 
                 </div>
-            </div>
-            <div class="services">
                 <div class="content">
                     <div class="item">
                         <h2>Obra Nueva</h2>
@@ -98,8 +98,6 @@
                         </ul>
                     </div> 
                 </div>
-            </div>
-            <div class="services">
                 <div class="content">
                     <div class="item">
                         <h2>Remodelaciones</h2>
@@ -113,7 +111,6 @@
                         </ul>
                     </div> 
                 </div>
-            </div>
         </div>
     <script type="text/javascript" src="{{url_for('static', filename = 'app.js')}}"></script>
 </body>
